#!/usr/bin/env python3
"""
Python MCP Server Consolidation Analysis for workspace-qdrant-mcp
Task 266.3 - Agent 3: Python MCP Server Consolidation Agent

Analysis of the tool consolidation needed from current 30+ tools to
PRD v3.0's 4 consolidated tools architecture.

PRD v3.0 Component 2 Requirements:
- Role: Intelligent Interface Layer
- Responsibilities: Search interface, memory management, conversational updates
- Performance: Sub-100ms query responses, session initialization with rule injection
- Communication: gRPC client to daemon, MCP protocol to Claude Code
- Tools: 4 consolidated tools (qdrant_store, qdrant_search, qdrant_memory, qdrant_watch)
"""

import os
import json
import ast
import re
from pathlib import Path
from typing import Dict, List, Set, Tuple
from dataclasses import dataclass, asdict

@dataclass
class ToolMapping:
    """Maps current tools to target consolidated tools"""
    current_tool: str
    target_consolidation: str
    functionality: List[str]
    migration_complexity: str
    backward_compatibility: str
    usage_frequency: str

@dataclass
class ConsolidationPlan:
    """Plan for consolidating tools"""
    target_tool: str
    description: str
    consolidated_functions: List[str]
    current_tools_merged: List[str]
    new_interface: Dict
    compatibility_layer: str

class PythonMCPConsolidationAnalyzer:
    """Analyze Python MCP server tool consolidation requirements"""

    def __init__(self, project_root: str):
        self.project_root = Path(project_root)
        self.server_file = self.project_root / "src/python/workspace_qdrant_mcp/server.py"
        self.current_tools = []
        self.consolidation_plan = {}

    def analyze_mcp_consolidation(self) -> Dict:
        """Main consolidation analysis method"""
        print("🐍 Starting Python MCP server consolidation analysis...")

        # Phase 1: Current tool inventory
        tool_inventory = self._inventory_current_tools()

        # Phase 2: Target architecture mapping
        target_mapping = self._map_target_architecture()

        # Phase 3: Tool consolidation planning
        consolidation_analysis = self._plan_tool_consolidation(tool_inventory, target_mapping)

        # Phase 4: Backward compatibility analysis
        compatibility_analysis = self._analyze_backward_compatibility()

        # Phase 5: Performance impact analysis
        performance_analysis = self._analyze_performance_impact()

        # Phase 6: Migration strategy
        migration_strategy = self._design_migration_strategy()

        # Phase 7: gRPC integration analysis
        grpc_integration = self._analyze_grpc_integration_needs()

        # Generate comprehensive report
        report = self._generate_consolidation_report(
            tool_inventory, target_mapping, consolidation_analysis,
            compatibility_analysis, performance_analysis,
            migration_strategy, grpc_integration
        )

        return report

    def _inventory_current_tools(self) -> Dict:
        """Inventory all current MCP tools"""
        print("🛠️ Inventorying current MCP tools...")

        if not self.server_file.exists():
            return {"error": f"Server file not found: {self.server_file}"}

        with open(self.server_file, 'r') as f:
            content = f.read()

        # Parse AST to find @app.tool decorators
        tree = ast.parse(content)
        tools = []

        for node in ast.walk(tree):
            if isinstance(node, ast.FunctionDef):
                # Check for @app.tool decorator
                for decorator in node.decorator_list:
                    if (isinstance(decorator, ast.Attribute) and
                        isinstance(decorator.value, ast.Name) and
                        decorator.value.id == 'app' and
                        decorator.attr == 'tool'):

                        # Extract tool information
                        tool_info = self._extract_tool_info(node, content)
                        tools.append(tool_info)

        # Categorize tools by functionality
        categorized_tools = self._categorize_tools(tools)

        return {
            "total_tools": len(tools),
            "tools": tools,
            "categorized": categorized_tools,
            "analysis_timestamp": "2025-09-20T22:10:00+02:00"
        }

    def _extract_tool_info(self, node: ast.FunctionDef, content: str) -> Dict:
        """Extract detailed information about a tool"""
        tool_name = node.name

        # Extract docstring
        docstring = ast.get_docstring(node) or ""

        # Extract parameters
        params = []
        for arg in node.args.args:
            params.append(arg.arg)

        # Count lines (approximate complexity)
        start_line = node.lineno
        end_line = node.end_lineno or start_line
        complexity = end_line - start_line

        # Analyze functionality from docstring and name
        functionality = self._analyze_tool_functionality(tool_name, docstring)

        return {
            "name": tool_name,
            "docstring": docstring[:200] + "..." if len(docstring) > 200 else docstring,
            "parameters": params,
            "complexity_lines": complexity,
            "functionality_category": functionality,
            "start_line": start_line,
            "end_line": end_line
        }

    def _analyze_tool_functionality(self, name: str, docstring: str) -> str:
        """Analyze tool functionality category"""
        text = (name + " " + docstring).lower()

        if any(term in text for term in ['search', 'find', 'query', 'retrieve']):
            return "search"
        elif any(term in text for term in ['add', 'store', 'save', 'insert', 'ingest']):
            return "storage"
        elif any(term in text for term in ['watch', 'monitor', 'folder', 'file']):
            return "watching"
        elif any(term in text for term in ['memory', 'rule', 'behavior', 'context']):
            return "memory"
        elif any(term in text for term in ['collection', 'manage', 'admin', 'config']):
            return "management"
        elif any(term in text for term in ['status', 'info', 'health', 'system']):
            return "system"
        else:
            return "utility"

    def _categorize_tools(self, tools: List[Dict]) -> Dict:
        """Categorize tools by functionality"""
        categories = {
            "search": [],
            "storage": [],
            "watching": [],
            "memory": [],
            "management": [],
            "system": [],
            "utility": []
        }

        for tool in tools:
            category = tool["functionality_category"]
            categories[category].append(tool["name"])

        return categories

    def _map_target_architecture(self) -> Dict:
        """Map target 4-tool architecture from PRD v3.0"""
        return {
            "qdrant_store": {
                "description": "Unified document storage and ingestion interface",
                "responsibilities": [
                    "Document ingestion and storage",
                    "Multi-format document handling",
                    "Project-aware storage",
                    "Batch operations",
                    "Metadata management"
                ],
                "consolidates": ["storage", "utility"],
                "interface_design": {
                    "parameters": ["content", "collection", "metadata", "project_context"],
                    "return_type": "StorageResult with ID and status"
                }
            },
            "qdrant_search": {
                "description": "Unified search interface with hybrid capabilities",
                "responsibilities": [
                    "Semantic search",
                    "Keyword search",
                    "Hybrid search",
                    "Project-scoped search",
                    "Multi-collection search"
                ],
                "consolidates": ["search"],
                "interface_design": {
                    "parameters": ["query", "collections", "search_type", "filters"],
                    "return_type": "SearchResults with ranked results"
                }
            },
            "qdrant_memory": {
                "description": "Memory and behavioral rule management",
                "responsibilities": [
                    "Rule storage and retrieval",
                    "Behavioral memory management",
                    "Context injection preparation",
                    "Cross-session persistence"
                ],
                "consolidates": ["memory"],
                "interface_design": {
                    "parameters": ["rule_type", "content", "scope", "priority"],
                    "return_type": "MemoryResult with rule ID"
                }
            },
            "qdrant_watch": {
                "description": "File system monitoring and management",
                "responsibilities": [
                    "Folder watching setup",
                    "Watch status monitoring",
                    "Real-time ingestion control",
                    "Watch configuration"
                ],
                "consolidates": ["watching", "management"],
                "interface_design": {
                    "parameters": ["path", "watch_config", "filters"],
                    "return_type": "WatchResult with status"
                }
            }
        }

    def _plan_tool_consolidation(self, inventory: Dict, target: Dict) -> List[ConsolidationPlan]:
        """Plan the tool consolidation strategy"""
        print("📋 Planning tool consolidation strategy...")

        plans = []
        categorized = inventory["categorized"]

        for target_tool, config in target.items():
            consolidates_categories = config["consolidates"]

            # Find current tools that map to this target tool
            current_tools = []
            for category in consolidates_categories:
                current_tools.extend(categorized.get(category, []))

            # Create consolidation plan
            plan = ConsolidationPlan(
                target_tool=target_tool,
                description=config["description"],
                consolidated_functions=config["responsibilities"],
                current_tools_merged=current_tools,
                new_interface=config["interface_design"],
                compatibility_layer=self._design_compatibility_layer(current_tools, target_tool)
            )
            plans.append(plan)

        # Handle tools that don't fit the 4-tool model
        unassigned_tools = self._find_unassigned_tools(inventory, plans)
        if unassigned_tools:
            # Create special handling for system/utility tools
            system_plan = self._create_system_tool_plan(unassigned_tools)
            plans.append(system_plan)

        return plans

    def _design_compatibility_layer(self, current_tools: List[str], target_tool: str) -> str:
        """Design backward compatibility layer"""
        if not current_tools:
            return "No compatibility layer needed"

        strategy = f"Compatibility layer for {target_tool}:\n"
        for tool in current_tools:
            strategy += f"  - {tool} -> {target_tool} with parameter mapping\n"

        strategy += f"  - Deprecation warnings for old tool names\n"
        strategy += f"  - Automatic parameter translation\n"
        strategy += f"  - Gradual migration support\n"

        return strategy

    def _find_unassigned_tools(self, inventory: Dict, plans: List[ConsolidationPlan]) -> List[str]:
        """Find tools not assigned to any consolidation plan"""
        all_assigned = set()
        for plan in plans:
            all_assigned.update(plan.current_tools_merged)

        all_tools = set(tool["name"] for tool in inventory["tools"])
        unassigned = all_tools - all_assigned

        return list(unassigned)

    def _create_system_tool_plan(self, unassigned_tools: List[str]) -> ConsolidationPlan:
        """Create plan for system/utility tools"""
        return ConsolidationPlan(
            target_tool="qdrant_system",
            description="System administration and utility functions",
            consolidated_functions=[
                "System status and health",
                "Configuration management",
                "Administrative operations"
            ],
            current_tools_merged=unassigned_tools,
            new_interface={
                "parameters": ["operation", "config", "options"],
                "return_type": "SystemResult with status and data"
            },
            compatibility_layer="Direct mapping with operation parameter routing"
        )

    def _analyze_backward_compatibility(self) -> Dict:
        """Analyze backward compatibility requirements"""
        print("🔄 Analyzing backward compatibility requirements...")

        return {
            "compatibility_strategy": "Gradual migration with deprecation warnings",
            "support_timeline": "6 months deprecation period",
            "breaking_changes": [
                "Tool names change from specific to consolidated",
                "Parameter structures may change",
                "Return value formats standardized"
            ],
            "mitigation_strategies": [
                "Automatic parameter mapping",
                "Wrapper functions for old tool names",
                "Comprehensive migration documentation",
                "Validation and error reporting"
            ],
            "testing_requirements": [
                "All existing tool calls must work",
                "Performance must be maintained or improved",
                "Error handling must be preserved"
            ]
        }

    def _analyze_performance_impact(self) -> Dict:
        """Analyze performance impact of consolidation"""
        print("⚡ Analyzing performance impact...")

        return {
            "expected_improvements": [
                "Reduced tool registration overhead",
                "Shared initialization costs",
                "Better caching opportunities",
                "Reduced memory footprint"
            ],
            "potential_concerns": [
                "Larger individual tool complexity",
                "Parameter validation overhead",
                "Routing complexity within tools"
            ],
            "benchmarking_plan": [
                "Tool registration time",
                "Individual operation performance",
                "Memory usage comparison",
                "Cold start performance"
            ],
            "target_metrics": {
                "registration_time": "50% reduction",
                "memory_usage": "30% reduction",
                "operation_latency": "Maintain <100ms"
            }
        }

    def _design_migration_strategy(self) -> Dict:
        """Design comprehensive migration strategy"""
        print("🚀 Designing migration strategy...")

        return {
            "phase_1": {
                "name": "Foundation Setup",
                "duration": "1 week",
                "tasks": [
                    "Implement 4 consolidated tools",
                    "Create compatibility layer",
                    "Add parameter mapping"
                ]
            },
            "phase_2": {
                "name": "Gradual Migration",
                "duration": "2 weeks",
                "tasks": [
                    "Deploy with both old and new tools",
                    "Add deprecation warnings",
                    "Monitor usage patterns",
                    "Performance validation"
                ]
            },
            "phase_3": {
                "name": "Full Transition",
                "duration": "1 week",
                "tasks": [
                    "Remove old tool implementations",
                    "Clean up compatibility layer",
                    "Update documentation",
                    "Final performance optimization"
                ]
            },
            "rollback_plan": {
                "trigger_conditions": [
                    "Performance degradation >20%",
                    "Critical functionality broken",
                    "User adoption <50% after 4 weeks"
                ],
                "rollback_steps": [
                    "Revert to old tool implementations",
                    "Disable new consolidated tools",
                    "Restore original documentation"
                ]
            }
        }

    def _analyze_grpc_integration_needs(self) -> Dict:
        """Analyze gRPC client integration needs"""
        print("🌐 Analyzing gRPC integration needs...")

        return {
            "current_communication": "Direct Python-Rust calls via PyO3",
            "target_communication": "gRPC client to Rust daemon",
            "integration_requirements": [
                "gRPC client setup and connection management",
                "Service method mappings",
                "Error handling for network issues",
                "Async operation support",
                "Connection pooling and retry logic"
            ],
            "implementation_changes": [
                "Replace direct Rust calls with gRPC calls",
                "Add gRPC client initialization",
                "Implement service discovery",
                "Add network error handling",
                "Update all tool implementations"
            ],
            "complexity_assessment": "Medium - requires architectural changes",
            "estimated_effort": "2-3 weeks for full gRPC integration"
        }

    def _generate_consolidation_report(self, inventory, target, consolidation,
                                     compatibility, performance, migration, grpc) -> Dict:
        """Generate comprehensive consolidation report"""
        print("📋 Generating consolidation report...")

        return {
            "analysis_metadata": {
                "timestamp": "2025-09-20T22:10:00+02:00",
                "component": "Component 2 - Python MCP Server",
                "analysis_type": "Tool Consolidation Analysis"
            },
            "executive_summary": {
                "current_tools": inventory["total_tools"],
                "target_tools": 4,
                "consolidation_ratio": f"{inventory['total_tools']}:4 reduction",
                "migration_complexity": "Medium - requires compatibility layer",
                "estimated_effort": "4-6 weeks for complete migration"
            },
            "current_tool_inventory": inventory,
            "target_architecture": target,
            "consolidation_plans": [asdict(plan) for plan in consolidation],
            "backward_compatibility": compatibility,
            "performance_analysis": performance,
            "migration_strategy": migration,
            "grpc_integration": grpc,
            "success_criteria": {
                "functionality_preservation": "100% of current functionality",
                "performance_improvement": "30% memory reduction",
                "compatibility_maintenance": "6 months deprecation support",
                "migration_timeline": "4-6 weeks total"
            }
        }

def main():
    """Main analysis execution"""
    project_root = "/Users/chris/Dropbox/dev/ai/claude-code-cfg/mcp/workspace-qdrant-mcp"

    analyzer = PythonMCPConsolidationAnalyzer(project_root)
    report = analyzer.analyze_mcp_consolidation()

    # Save detailed report
    output_file = f"{project_root}/20250920-2210_python_mcp_consolidation_report.json"
    with open(output_file, 'w') as f:
        json.dump(report, f, indent=2)

    print(f"✅ Python MCP consolidation analysis complete! Report saved to: {output_file}")

    # Print executive summary
    print(f"\n📊 PYTHON MCP CONSOLIDATION SUMMARY:")
    print(f"Current Tools: {report['executive_summary']['current_tools']}")
    print(f"Target Tools: {report['executive_summary']['target_tools']}")
    print(f"Consolidation Ratio: {report['executive_summary']['consolidation_ratio']}")
    print(f"Migration Complexity: {report['executive_summary']['migration_complexity']}")
    print(f"Estimated Effort: {report['executive_summary']['estimated_effort']}")

    return report

if __name__ == "__main__":
    main()